src/Components/Hero/reasonsWhy.css
.reasonsSection {
    height: 1500px;
    background-color: hsl(0, 0%, 98%);
}

.content {
    border: solid 3px black;
    height: 50%;
    padding: 0;
    margin: 0;
    background: url('../images/bg-intro-desktop.svg');
    background-position-x: 580px;
    background-position-y: -290px;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    display: flex;
    flex-direction: row;
    overflow: hidden;
    
}

.imagemock {
    z-index: 2;
    border: solid 2px red;
    width: 52%;
    
}

.imagemock img {
    
    float: right;
    transform: translate(150px, -70px);
}

.next-generation {
    height: 100%;
    /* margin-left: 90px; */
    border: solid 2px green;
    margin-top: 0;
    width: 48%;
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    padding: 0px 35px 0 35px;
    text-align: left;

}

.next-generation h2 {
    font-weight: 400;
    font-size: 50px;
    color: hsl(233, 26%, 24%);
    font-family: 'Public Sans', sans-serif;
    margin-bottom: 0;
    padding-bottom: 20px;
}

.next-generation p {
    color: hsl(233, 8%, 62%);
    width: auto;
    font-family: 'Public Sans', sans-serif;
    font-size: 18px;
    margin-bottom: 0;
    padding-bottom: 30px;
}

.request-invites {
    width: 160px;
    height: 40px;

}

.request-invites button {
    width: 100%;
    height: 100%;
    border-radius: 50px;
    background-image: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
    background-image: linear-gradient(to right, #31d35c, #2bb7da);
    border: transparent;
    font-family: 'Public Sans', sans-serif;
    color: white;
    font-weight: 300;
    font-size: 14px;
}


.why-easybank {
    background-color: #f3f4f6;
    height: 800px;

}

.text-content {
    height: 300px;
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0px 35px 0 35px;
}


.text-content h5 {
    font-weight: 400;
    font-size: 50px;
    color: hsl(233, 26%, 24%);
    font-family: 'Public Sans', sans-serif;
    margin-bottom: 0;
    padding-bottom: 20px;
}

.text-content p {
    font-family: 'Public Sans', sans-serif;
    font-size: 18px;
    color: hsl(233, 8%, 62%);
}

.reasonswhygrid {
    height: 450px;
    margin-top: 20px;
    padding-top: 10px;
    display: flex;
    flex-direction: row wrap;
    align-content: center;

}

.reason .icon {
    margin-bottom: 40px;

}

.reason h2 {
    font-family: 'Public Sans', sans-serif;
    font-size: 21px;
    font-weight: 700;

}

.reason p {
    font-family: 'Public Sans', sans-serif;
    font-size: 17px;
    font-weight: 300;
    color: hsl(233, 8%, 62%);
}

@media screen and (max-width:1279px) and (min-width: 1024px) {

    .reasonsSection {
        height: 1200px;
    }

    .content {
        background-position-x: 550px;
        background-position-y: -160px;
        height: 550px;
    }

    .imagemock {
        overflow: hidden;
    }

    .imagemock img {
        float: right;
        transform: translate(310px, -80px);
    }



    .next-generation h2 {
        font-weight: 400;
        font-size: 50px;
        color: hsl(233, 26%, 24%);
        font-family: 'Public Sans', sans-serif;
        margin-bottom: 0;
        padding-bottom: 20px;
        text-align: left;
    }

    .next-generation p {
        text-align: left;
        font-size: initial;

    }

    .why-easybank {
        height: 700px;
    }

    .text-content {
        width: 57%;
    }

    .text-content h5 {
        font-size: 42px;
    }

    .reasonswhygrid {
        height: 280px;
        margin-top: 0;
        padding-top: 0;
    }

    #root {
        height: 2180px;
    }




}


@media screen and (max-width: 1027px) and (min-width: 768px) {
    .reasonsSection {
        height: 1000px;
    }

    .content {
        display: flex;
        flex-direction: column-reverse;
    }


    .next-generation h2 {
        text-align: center;
        font-size: 35px;

    }

    .next-generation p {
        text-align: center;
        font-size: 15px;
    }

}

